# jangq

./: .gitignore  CHANGELOG.md  README-USER.md  README.md
jang-tools/: CHANGELOG.md  M5_JANGTQ_TENSOROPS_PRODUCTION_PLAN_2026_05_12.md  MANIFEST.in  README.md  jangtq_expert_cluster_probe.py  jangtq_live_nax_probe.py  jangtq_speed_ceiling.py  pyproject.toml
jang-tools/_internal/jang_v3/: __init__.py  budget_solver.py  encode.py
jang-tools/docs/: mimo-v25-python-vl-runtime-gap-20260606.md
jang-tools/examples/: reasoning_leak_audit.py
jang-tools/examples/dsv4_flash/: 00_verify.py  01_text_only.py  02_thinking.py  03_tool_calling.py  04_long_context.py  05_streaming_generation.py  README.md
jang-tools/examples/hy3/: 00_inspect_source.py  01_python_reference_smoke.py  02_python_runtime_contract.py  Hy3RuntimeContract.swift  MTP_COMPATIBILITY.md  README.md  RUNTIME_AND_QUANTIZATION_NOTES.md
jang-tools/examples/laguna/: 00_verify.py  01_code_completion.py  02_thinking.py  README.md
jang-tools/examples/mimo_v2/: README.md  affine_codec_compare.py  awq_source_probe.py  bundle_audit.py  bundle_config_audit.py  compare_loaded_attention_component.py  compare_loaded_expert_qdq.py  compare_loaded_moe_component.py  decode_component_probe.py  direct_logits_probe.py  estimate_affine_profiles.py  estimate_pruned_affine_profiles.py  expert_quant_probe.py  inspect_loaded_quant.py  layer_component_probe.py  layer_diff_probe.py  moe_prefill_component_probe.py  router_trace_probe.py  source_greedy_probe.py  source_profile_probe.py  source_prune_vs_affine_probe.py  text_smoke.py  vl_smoke.py  vlm_vision_parity_probe.py
jang-tools/examples/mistral3/: 00_verify.py  01_chat.py  README.md
jang-tools/examples/mtp/: README.md  estimate_jangtq_fit.py  inspect_mtp_bundle.py  patch_qwen36_mxfp4_mtp.py  qwen36_mtp_baseline_vs_spec.py  qwen36_mtp_cache_safety_probe.py  qwen36_mtp_runtime_probe.py  qwen36_mtp_vl_probe.py
jang-tools/examples/nemotron_omni/: 00_verify_all.py  01_text_only.py  02_multimodal_single.py  03_multimodal_multiturn.py  04_interactive_repl.py  05_reasoning_compare.py  06_video_chat.py  README.md  RUNTIME_GUIDE.md
jang-tools/examples/nemotron_ultra/: runtime_next_runbook.py
jang-tools/examples/turboquant/: mpp_dense_probe.py  mpp_prefill_mlp_probe.py
jang-tools/examples/zaya/: 00_inspect_source.py  01_python_vllm_smoke.py  02_python_runtime_contract.py  03_coherence_gate.py  04_prepare_hf_uploads.py  ATTENTION_ARCHITECTURE.md  README.md  ZayaRuntimeContract.swift
jang-tools/examples/zaya1_vl/: 00_inspect_source.py  README.md
jang-tools/jang_tools/: __init__.py  __main__.py  _json_utils.py  allocate.py  architectures.py  awq.py  awq_capture.py  awq_capture_fp8.py  awq_capture_minimax.py  awq_scales.py  build_jangtq_sidecar.py  build_n2_prune_map_from_router_trace.py  build_nemotron_omni_addon.py  capabilities.py  capabilities_cli.py  codebook_vq.py  convert.py  convert_gemma4_jang.py  convert_gemma4_mxfp.py  convert_glm51_jangtq_2l.py  convert_hy3_jang.py  convert_hy3_jangtq.py  convert_laguna_jang.py  convert_ling_jangtq.py  convert_ling_mxfp4.py  convert_minimax_jang.py  convert_minimax_jangtq.py  convert_nemotron_jangtq.py  convert_nemotron_mxfp4.py  convert_qwen35_jangtq.py  convert_qwen35_mxfp4.py  convert_qwen35_mxfp8.py  convert_zaya1_vl_common.py  convert_zaya1_vl_jangtq.py  convert_zaya1_vl_mxfp4.py  convert_zaya_common.py  convert_zaya_jangtq.py  convert_zaya_mxfp4.py  estimate_model.py  examples.py  (+29 more)
jang-tools/jang_tools/dflash/: __init__.py  config.py  convert_to_mlx.py  distill_data.py  drafter.py  train.py
jang-tools/jang_tools/dsv4/: README.md  __init__.py  analyze_quant_matrix.py  chat_template.py  convert_dsv4_bf16.py  convert_dsv4_jang.py  convert_dsv4_jangtq.py  convert_dsv4_native.py  diff_one_block.py  diff_per_op.py  diff_real_layer0.py  encoding_adapter.py  fp4_codec.py  fp8_ue8m0_codec.py  layer_forward.py  mlx_model.py  mlx_register.py  ops.py  patch_bundle_eos.py  pool_quant_cache.py  runtime.py  verify_bf16_identical.py  verify_mlx_vs_torch.py  weight_loader.py
jang-tools/jang_tools/eval/: README.md  __init__.py
jang-tools/jang_tools/format/: reader.py  spec.py  writer.py
jang-tools/jang_tools/hy3/: README.md  __init__.py  awq_capture.py  awq_search.py  estimate_size.py  model.py  runtime.py
jang-tools/jang_tools/jangrt/: __init__.py  inference_mode.py  jangtq_hydrate.py  linear.py  loader.py  switchglu_decode.py
jang-tools/jang_tools/jangspec/: README.md  __init__.py  blob.py  builder.py  bundle_loader.py  cli.py  format.py  index.py  manifest.py  reader.py  tier.py
jang-tools/jang_tools/kimi_prune/: PLAN.md  README.md  __init__.py  bench.py  bench_humaneval.py  (+24 more)
jang-tools/scripts/: export_jangtq_runtime.py  gen_matmul_fixture.py  jangtq_speed_ceiling.py  validate_bundle_gemma4.py  validate_dsv4_flash_rope_scaling.py  validate_gemma4_12b_artifacts.py
jang-tools/tests/: mimo_v2_affine_codec_test.py  mimo_v2_awq_fold_test.py  mimo_v2_awq_qdq_test.py  mimo_v2_contract_test.py  mimo_v2_router_trace_test.py  n2_convert_override_reporting_test.py  n2_jang_expert_pruner_test.py  n2_router_trace_prune_map_test.py  qwen35_jangtq_converter_metadata_test.py  test_allocate_mlp_asymmetry.py  test_build_jangtq_sidecar.py  test_capabilities_cli.py  test_capabilities_verify_directory.py  test_cli_flags.py  test_convert_cleanup.py  test_convert_eos_fixes.py  test_convert_group_size.py  test_convert_mtp_vl_contract.py  test_convert_progress.py  test_dflash_drafter.py  test_dsv4_converter_contract.py  test_dsv4_hc_sinkhorn.py  test_dsv4_overlap_cache.py  test_dsv4_parity_tool_contract.py  test_dsv4_pool_quant_cache.py  test_dsv4_pool_quant_cache_residency.py  test_dsv4_rope_reference.py  test_estimate_model.py  test_examples.py  test_exception_handling_invariant.py  test_fd_leak_pattern.py  test_format.py  test_hy3_capabilities.py  test_hy3_jangtq1_profile_contract.py  test_inference.py  test_inspect_source.py  test_jang_v3_dsv4_contract.py  test_jangtq_converter_profile_parity.py  test_jangtq_decode_profiler.py  test_jangtq_hydrate.py  (+40 more)
(+468 files in other folders)
