[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jang"
version = "2.5.27"
description = "JANG — Adaptive Mixed-Precision Quantization for Apple Silicon. v2.5.27: ZAYA JANGTQ/MXFP converters and tools-only CCA capability contract. v2.5.18: DSV4 sampling defaults bumped to thinking-rep_penalty=1.15 / chat-rep_penalty=1.05 / max_new_tokens=4096 (audit-validated; prevents OOD-prompt repetition collapse in thinking mode)."
license = {text = "Apache-2.0"}
requires-python = ">=3.11"
authors = [{name = "Jinho Jang", email = "eric@jangq.ai"}]
maintainers = [{name = "Jinho Jang", email = "eric@jangq.ai"}]
keywords = ["quantization", "llm", "apple-silicon", "metal", "mlx", "jang", "moe", "mixed-precision"]
readme = "README.md"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Operating System :: MacOS",
]
dependencies = ["safetensors>=0.4", "numpy>=1.24", "tqdm>=4.60", "huggingface_hub>=0.20", "jinja2>=3.1"]

[project.optional-dependencies]
mlx = ["mlx>=0.31.2", "mlx-lm>=0.31.0"]
vlm = ["mlx>=0.31.2", "mlx-lm>=0.31.0", "mlx-vlm>=0.1"]
torch = ["torch>=2.0", "transformers>=4.40"]
all = ["jang[mlx]", "jang[vlm]", "jang[torch]"]

[project.scripts]
jang = "jang_tools.__main__:main"
jang-convert-laguna-jangtq = "jang_tools.convert_laguna_jangtq:main"
jang-convert-laguna-mxfp4  = "jang_tools.convert_laguna_mxfp4:main"
jang-convert-mistral3-jangtq = "jang_tools.convert_mistral3_jangtq:main"
jang-convert-mistral3-mxfp4  = "jang_tools.convert_mistral3_mxfp4:main"
jang-convert-zaya-jangtq = "jang_tools.convert_zaya_jangtq:main"
jang-convert-zaya-mxfp4 = "jang_tools.convert_zaya_mxfp4:main"
jang-laguna-runtime  = "jang_tools.laguna.runtime:main"
jang-mistral3-runtime = "jang_tools.mistral3.runtime:main"
jang-mmlu = "jang_tools.eval.mmlu:main"
jang-dsv4-codesign-smoke = "jang_tools.dsv4.experiments.codesign_smoke:main"
jang-dsv4-build-role-codebooks = "jang_tools.dsv4.build_role_codebooks:main"
jang-patch-dsv4-compressor-dtypes = "jang_tools.patch_dsv4_compressor_dtypes:main"
[project.urls]
Homepage = "https://jangq.ai"
Repository = "https://github.com/jjang-ai/jangq"
Documentation = "https://github.com/jjang-ai/jangq#readme"
"Bug Tracker" = "https://github.com/jjang-ai/jangq/issues"
"HuggingFace" = "https://huggingface.co/JANGQ-AI"

[tool.setuptools.packages.find]
include = ["jang_tools*"]

[tool.setuptools.package-data]
jang_tools = ["templates/*.jinja"]
