[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jang"
version = "2.5.33"
description = "JANG — Adaptive Mixed-Precision Quantization for Apple Silicon. v2.5.33: Laguna mixed-affine loaders derive each module's packed bit width and expose a runtime capability marker so vMLX can reject stale wheels before inference."
license = {text = "Apache-2.0"}
requires-python = ">=3.11"
authors = [{name = "Jinho Jang", email = "eric@jangq.ai"}]
maintainers = [{name = "Jinho Jang", email = "eric@jangq.ai"}]
keywords = ["quantization", "llm", "apple-silicon", "metal", "mlx", "jang", "moe", "mixed-precision"]
readme = "README.md"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Operating System :: MacOS",
]
dependencies = ["safetensors>=0.4", "numpy>=1.24", "tqdm>=4.60", "huggingface_hub>=0.20", "jinja2>=3.1"]

[project.optional-dependencies]
mlx = ["mlx>=0.31.2", "mlx-lm>=0.31.0"]
vlm = ["mlx>=0.31.2", "mlx-lm>=0.31.0", "mlx-vlm>=0.1"]
torch = ["torch>=2.0", "transformers>=4.40"]
all = ["jang[mlx]", "jang[vlm]", "jang[torch]"]

[project.scripts]
jang = "jang_tools.__main__:main"
jang-convert-laguna-jangtq = "jang_tools.convert_laguna_jangtq:main"
jang-convert-laguna-mxfp4  = "jang_tools.convert_laguna_mxfp4:main"
jang-convert-mistral3-jangtq = "jang_tools.convert_mistral3_jangtq:main"
jang-convert-mistral3-mxfp4  = "jang_tools.convert_mistral3_mxfp4:main"
jang-convert-qwen35-mxfp4 = "jang_tools.convert_qwen35_mxfp4:main"
jang-convert-qwen35-mxfp8 = "jang_tools.convert_qwen35_mxfp8:main"
jang-convert-zaya-jangtq = "jang_tools.convert_zaya_jangtq:main"
jang-convert-zaya-mxfp4 = "jang_tools.convert_zaya_mxfp4:main"
jang-convert-zaya1-vl-jangtq = "jang_tools.convert_zaya1_vl_jangtq:main"
jang-convert-zaya1-vl-mxfp4 = "jang_tools.convert_zaya1_vl_mxfp4:main"
jang-convert-kimi-jangtq = "jang_tools.kimi_prune.convert_kimi_jangtq:main"
jang-convert-gemma4-jang = "jang_tools.convert_gemma4_jang:main"
jang-convert-gemma4-mxfp = "jang_tools.convert_gemma4_mxfp:main"
jang-convert-mimo-v2-jang = "jang_tools.mimo_v2.convert_jang:main"
jang-verify-mimo-v2 = "jang_tools.mimo_v2.verify_bundle:main"
jang-laguna-runtime  = "jang_tools.laguna.runtime:main"
jang-mistral3-runtime = "jang_tools.mistral3.runtime:main"
jang-mmlu = "jang_tools.eval.mmlu:main"
jang-dsv4-codesign-smoke = "jang_tools.dsv4.experiments.codesign_smoke:main"
jang-dsv4-build-role-codebooks = "jang_tools.dsv4.build_role_codebooks:main"
jang-patch-dsv4-compressor-dtypes = "jang_tools.patch_dsv4_compressor_dtypes:main"
[project.urls]
Homepage = "https://jangq.ai"
Repository = "https://github.com/jjang-ai/jangq"
Documentation = "https://github.com/jjang-ai/jangq#readme"
"Bug Tracker" = "https://github.com/jjang-ai/jangq/issues"
"HuggingFace" = "https://huggingface.co/JANGQ-AI"

[tool.setuptools.packages.find]
include = ["jang_tools*"]

[tool.setuptools.package-data]
jang_tools = ["templates/*.jinja"]

[tool.pytest.ini_options]
testpaths = ["tests", "jang_tools/dsv4/tests"]
